Profiles modified, images added and some minor changes made on index.html

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			</div>
 			<div class="container"> 
 				
-				<!-- Logo -->
+				<!-- Aqui estaba el titulo -->
 				<div id="logo">
-					<h1><a href="#">Guareber Tech</a></h1>
-					<span class="tag">By Luda</span>
+					<h1><a href="#"></a></h1>
+					<span class="tag"></span>
 				</div>
 			</div>
 		</div>
@@ -51,26 +51,26 @@
 				<header>
 					<h2>Guareber Tech</h2>
 				</header>
-				<p>Diseño de <strong>Guareber</strong>, In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula.<a href="http://www.twitter.com/Luda1604">Luda</a>. Maecenas luctus lectus <a href="http://www.facebook.com">tellus. Curabitur</a>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.<a href="http://facebook.com">net upr</a> ore clito<a href="http://twitter.com/Luda1604">Twitter</a>.</p>
+				<p>La Fundacion <strong>Guareber Tech</strong>, Es una organizacion sin fines de lucro con el objetivo principal de crear soluciones tecnologicas que generen un impacto positivo en nuestra sociedad. Es por ello, utilizamos nuestras habilidades en las diferentes tecnologicas para crear contenido que faciliten las tareas cotidianas a nuestros clientes. Sabiendo el gran potencial que existe en nuestra organizacion; sobre las diferentes tecnologias, contamos con un talento humano de jovenes emprendedores capacitados para enfrentar cualquier reto. Nuestras tecnologias estan basadas para la adaptacion de las solicitudes de nuestros clientes y de esta manera crear software de calidad.</p>
 				<hr />
 				<div class="row">
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-briefcase"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<span class="pennant"><span class="fa fa-book"></span></span>
+						<h3>Academia GuareberTech.</h3>
+						<p>Nuestra principal motivacion es compartir nuestros conocimientos con los amantes de IT para de esta manera aportar con el saber.</p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-lock"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<h3>La Exclusividad del Servicio.</h3>
+						<p>Todas nuestras soluciones tecnologicas son unicas para nuestros clientes, ya que nuestro lema es "Desarrollamos solo para TI" .</p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<h3>Planificacion Estretegica</h3>
+						<p>Contamos con un plan de desarrollo bajo la metodologia SCRUM-VE. Dicha metodologia nos permite una forma eficente de trabajar. </p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 
 				</div>
@@ -111,57 +111,74 @@
 			
 		</div> <!-- cierre del Main -->
 <!-- Team -->	
-			<div id="team">
-				<a name="equipo"> <h2> Nuestro Equipo</h2></a>
-				<div class="row">
-				<section class="3u">
+<div id="team">	
+	<a name="equipo"> <h2> Nuestro Equipo</h2></a>
+		<div class="row">
+			<section class="3u">
 						<div class="circular"><img src="images/darwin.jpg"> </div>
 						  <h3>Darwin Vasquez</h3>
-						<p>Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia. Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
-						Follow me @darwin_vasqz :D</p>
+						<p >Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia.Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
+						 <li><a href="http://www.twitter.com/darwin_vasqz" class="fa fa-twitter"><span>Twitter</span></a></li>
+						</p>
 			</section>
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
+						<div class="circular"><img src="images/ivan.jpg"> </div>
+						<h3>Ivan Diaz</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<div class="circular"><img src="images/x.jpg"> </div>
+						<h3>Daniel Molina</h3>
+						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
+                          //Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!
+                          <li><a href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<div class="circular"><img src="images/juan.jpg"> </div>
+						<h3>Juan Arrieta</h3>
+						<p>Programador | Game Maker | Escritor | Soñador | Adicto al #Toddy | Alegre | Espontaneo | Divertido | ΔOX☐ User | Microsoft Fanboy | Metal Gear Solid Loved | Gamer | Anime Follower | Ateo | SQL Servers | Help Desk | Youtuber | Just For Fun.
+
+                        <li><a href="http://www.twitter.com/kayiien" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<div class="circular"><img src="images/franklin.jpg"> </div>
+						<h3>Franklin Marquez</h3>
+						<p>Estudiante de Ingenieria de Sistemas, Aficionado a los Video Juegos Multiplataforma, la Música de Rock, el Anime, la Ciencia y la Tecnología; Programador, especializado en el desarrollo de páginas web, aplicaciones y juegos en Unity 3D, edición en Photoshop y diseño en pixel art. No me guio por los modismos o convencionalismos sociales.
+                        <li><a href="http://www.twitter.com/frank_2893" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<div class="circular"><img src="images/luda.jpg"></div>
+						<h3>Luis Casanova</h3>
+						<p>Jedi | Geek | Curious | Sarcástico | Ironico | AIESECer | Front/Backend Developer | UX/UI Designer | Gamer | Java | C++ | Networking & Telecom | Digital Marketing | Systems Design | Crítico | Zombie come libros de medio tiempo | Science & Tech |
+
+                        <li><a href="http://www.twitter.com/Luda1604" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<div class="circular"><img src="images/x.jpg"> </div>
+						<h3>Oscar Lopez</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.
+						 <li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+						</p>
 			</section>	
 			<section class="3u">
-						<span class="pennant"><span class="fa fa-male"></span></span>
-						<h3>Maecenas luctus lectus</h3>
+		                <div class="circular"><img src="images/x.jpg"> </div>
+						<h3>Erwin Cury</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						 <li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+						 </p>
 			</section>	
-			</div><!-- cierre del row -->
-			</div> <!-- cierre del team -->
+			</div>
+			</div> 
+<!-- cierre del team -->
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+					<blockquote>&ldquo;La innovación distingue a los líderes de los seguidores. Steven Jobs. &rdquo;</blockquote>
 				</section>
 			</div>
 		</div>
