Footer message changed

--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
 				<section>
 					<header>
 						<h2>Footer</h2>
-						<span class="byline">No se que poner aquí</span>
+						<span class="byline">Get in touch</span>
 					</header>
 					<ul class="contact">
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
