--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<div class="circular"><img src="images/darwin.jpg"> </div>
 						  <h3>Darwin Vasquez</h3>
 						<p >Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia.Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
-						 <li><a href="http://www.twitter.com/darwin_vasqz" class="fa fa-twitter"><span>Twitter</span></a></li>
+						 <li><a target="_blank" href="http://www.twitter.com/darwin_vasqz" class="fa fa-twitter"><span>Twitter</span></a></li>
 						</p>
 			</section>
 			<section class="3u">
@@ -178,7 +178,7 @@
 						<h3>Daniel Molina</h3>
 						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
                           //Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!
-                          <li><a href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
+                          <li><a target="_blank" href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
                         </p>
 			</section>	
 			<section class="3u">
@@ -186,23 +186,23 @@
 						<h3>Juan Arrieta</h3>
 						<p>Programador | Game Maker | Escritor | Soñador | Adicto al #Toddy | Alegre | Espontaneo | Divertido | ΔOX☐ User | Microsoft Fanboy | Metal Gear Solid Loved | Gamer | Anime Follower | Ateo | SQL Servers | Help Desk | Youtuber | Just For Fun.
 
-                        <li><a href="http://www.twitter.com/kayiien" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+                        <li><a target="_blank" href="http://www.twitter.com/kayiien" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			<section class="3u">
 						<div class="circular"><img src="images/franklin.jpg"> </div>
 						<h3>Franklin Marquez</h3>
 						<p>Estudiante de Ingenieria de Sistemas, Aficionado a los Video Juegos Multiplataforma, la Música de Rock, el Anime, la Ciencia y la Tecnología; Programador, especializado en el desarrollo de páginas web, aplicaciones y juegos en Unity 3D, edición en Photoshop y diseño en pixel art. No me guio por los modismos o convencionalismos sociales.
-                        <li><a href="http://www.twitter.com/frank_2893" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+                        <li><a target="_blank" href="http://www.twitter.com/frank_2893" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			<section class="3u">
 						<div class="circular"><img src="images/luis.jpg"> </div>>
 						<h3>Luis Casanova</h3>
 						<p>Jedi | Geek | Curious | Sarcástico | Ironico | AIESECer | Front/Backend Developer | UX/UI Designer | Gamer | Java | C++ | Networking & Telecom | Digital Marketing | Systems Design | Crítico | Zombie come libros de medio tiempo | Science & Tech |
 
-                        <li><a href="http://www.twitter.com/Luda1604" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+                        <li><a target="_blank" href="http://www.twitter.com/Luda1604" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			<section class="3u">
-						<div class="circular"><img src="images/x.jpg"> </div>
+						<div class="circular"><img src="images/oscar.jpg"> </div>
 						<h3>Oscar Lopez</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
 			</section>	
@@ -245,7 +245,7 @@
 		<div id="copyright">
 			<div class="container">
 				Todos los Derechos Reservados 2015: 
-				<a href="http://www.twitter.com/GuareberTech">Guareber Tech</a> 
+				<a target="_blank" href="http://www.twitter.com/GuareberTech">Guareber Tech </a> 
 			</div>
 		</div>
 
