--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<section class="3u">
 						<div class="circular"><img src="images/ivan.jpg"> </div>
 						<h3>Ivan Diaz</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<p>Estudiante de Ingenieria de Sistemas, proactivo, innovador, autodidacta, emprendedor, atraido por la seguridad informatica, la programacion, las nuevas tacnologias y la ciencia como herramienta de vida, programador en HTML5, CSS3, PHP, JAVA, C, C++</p>
 			</section>	
 			<section class="3u">
 						<div class="circular"><img src="images/x.jpg"> </div>
