--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <li><a target="_blank" href="http://www.twitter.com/frank_2893" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			<section class="3u">
-						<div class="circular"><img src="images/luis.jpg"> </div>>
+						<div class="circular"><img src="images/luis.jpg"> </div>
 						<h3>Luis Casanova</h3>
 						<p>Jedi | Geek | Curious | Sarcástico | Ironico | AIESECer | Front/Backend Developer | UX/UI Designer | Gamer | Java | C++ | Networking & Telecom | Digital Marketing | Systems Design | Crítico | Zombie come libros de medio tiempo | Science & Tech |
 
@@ -204,12 +204,7 @@
 			<section class="3u">
 						<div class="circular"><img src="images/oscar.jpg"> </div>
 						<h3>Oscar Lopez</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-			</section>	
-			<section class="3u">
-		                <div class="circular"><img src="images/x.jpg"> </div>
-						<h3>Erwin Cury</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+						<p>Buscador del Equilibrio entre Mente y Cuerpo, Shotting Games, Fitness, xD, Vegetariano, Analista, Smile always, Algorithm Developer, me gusta el anime, programar, Muertos Vientes, Preppers, mitologia, critico, debatir con religiosos, calcular probabilidades, siempre ser mejor de lo que eres, enterpresing, entender distintas cultura, Kanjis, relax.</p>
 			</section>	
 			</div>
 			</div> 
