--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en" class="no-js">
+
 	<head>
 		<title>Guareber Tech</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -34,7 +35,7 @@
 						<li class="active"><a href="index.html">Inicio</a></li>
 						<li><a href="#">Portafolio</a></li>
 						<li><a href="#">Equipo</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<li><a href="timeline.html">timeline</a></li>
 						<li><a href="#">Contacto</a></li>
 					</ul>
 				</nav>
@@ -162,6 +163,14 @@
 				<a name="equipo"> <h2> Nuestro Equipo</h2></a>
 				<div class="row">
 				<section class="3u">
+						<div class="circular"><img src="images/daniel.jpg"> </div>
+						<h3>Daniel Molina</h3>
+						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
+                          //Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!
+                          <li><a target="_blank" href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
+			</section>
+				<section class="3u">
 						<div class="circular"><img src="images/darwin.jpg"> </div>
 						  <h3>Darwin Vasquez</h3>
 						<p >Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia.Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
@@ -171,16 +180,11 @@
 			<section class="3u">
 						<div class="circular"><img src="images/ivan.jpg"> </div>
 						<h3>Ivan Diaz</h3>
-						<p>Estudiante de Ingenieria de Sistemas, proactivo, innovador, autodidacta, emprendedor, atraido por la seguridad informatica, la programacion, las nuevas tacnologias y la ciencia como herramienta de vida, programador en HTML5, CSS3, PHP, JAVA, C, C++</p>
+						<p>Estudiante de Ingenieria de Sistemas, proactivo, innovador, autodidacta, emprendedor, atraido por la seguridad informatica, la programacion, las nuevas tacnologias y la ciencia como herramienta de vida, programador en HTML5, CSS3, PHP, JAVA, C, C++
+						<li><a target="_blank" href="http://www.twitter.com/ivancho2802" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
-			<section class="3u">
-						<div class="circular"><img src="images/x.jpg"> </div>
-						<h3>Daniel Molina</h3>
-						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
-                          //Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!
-                          <li><a target="_blank" href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
-                        </p>
-			</section>	
+			</div>
+				<div class="row">
 			<section class="3u">
 						<div class="circular"><img src="images/juan.jpg"> </div>
 						<h3>Juan Arrieta</h3>
@@ -205,6 +209,7 @@
 						<div class="circular"><img src="images/oscar.jpg"> </div>
 						<h3>Oscar Lopez</h3>
 						<p>Buscador del Equilibrio entre Mente y Cuerpo, Shotting Games, Fitness, xD, Vegetariano, Analista, Smile always, Algorithm Developer, me gusta el anime, programar, Muertos Vientes, Preppers, mitologia, critico, debatir con religiosos, calcular probabilidades, siempre ser mejor de lo que eres, enterpresing, entender distintas cultura, Kanjis, relax.</p>
+						<li><a target="_blank" href="http://www.twitter.com/OJoseLopez" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			</div>
 			</div> 
