Changes in team and description

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<li><a href="#portafolio">Portafolio</a></li>
 						<li><a href="#equipo">Equipo</a></li>
 						<li><a href="blog.html">Blog</a></li>
+						<li><a href="timeline.html">timeline</a></li>
 						<li><a href="#">Contacto</a></li>
 					</ul>
 				</nav>
@@ -113,61 +114,64 @@
 		</div> <!-- cierre del Main -->
 <!-- Team -->	
 			<div id="team">
-				<a name="equipo"> <h2> Nuestro Equipo</h2></a>
+				<a name="equipo"> <h2>Equipo</h2></a>
 				<div class="row">
+				<section class="3u">
+						<div class="circular"><img src="images/daniel.jpg"> </div>
+						<h3>Daniel Molina</h3>
+						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
+                          //Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!
+                          <li><a target="_blank" href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        </p>
+			</section>
+			<section class="3u">
+						<div class="circular"><img src="images/luda.jpg"> </div>
+						<h3>Luis Casanova</h3>
+						<p>Jedi | Geek | Curious | Sarcástico | Ironico | AIESECer | Front/Backend Developer | UX/UI Designer | Gamer | Java | C++ | Networking & Telecom | Digital Marketing | Systems Design | Crítico | Zombie come libros de medio tiempo | Science & Tech |
+
+                        <li><a target="_blank" href="http://www.twitter.com/Luda1604" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+			</section>	
 				<section class="3u">
 						<div class="circular"><img src="images/darwin.jpg"> </div>
 						  <h3>Darwin Vasquez</h3>
-						<p>Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia. Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project.
-					</p>
-					<a href="http://www.twitter.com/darwin_vasqz" class="fa fa-twitter" target="_blank"><span>Twitter</span></a>
+						<p >Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia.Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
+						 <li><a target="_blank" href="http://www.twitter.com/darwin_vasqz" class="fa fa-twitter"><span>Twitter</span></a></li>
+						</p>
 			</section>
 			<section class="3u">
 						<div class="circular"><img src="images/ivan.jpg"> </div>
 						<h3>Ivan Diaz</h3>
-						<p>Estudiante de Ingenieria de Sistemas, proactivo, innovador, autodidacta, emprendedor, atraido por la seguridad informatica, la programacion, las nuevas tacnologias y la ciencia como herramienta de vida, programador en HTML5, CSS3, PHP, JAVA, C, C++</p>
+						<p>Estudiante de Ingenieria de Sistemas, proactivo, innovador, autodidacta, emprendedor, atraido por la seguridad informatica, la programacion, las nuevas tacnologias y la ciencia como herramienta de vida, programador en HTML5, CSS3, PHP, JAVA, C, C++
+						<li><a target="_blank" href="http://www.twitter.com/ivancho2802" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+			</section>	
+			</div>
+				<div class="row">
+			<section class="3u">
+						<div class="circular"><img src="images/juan.jpg"> </div>
+						<h3>Juan Arrieta</h3>
+						<p align="right">Programador | Game Maker | Escritor | Soñador | Adicto al #Toddy | Alegre | Espontaneo | Divertido | ΔOX☐ User | Microsoft Fanboy | Metal Gear Solid Loved | Gamer | Anime Follower | Ateo | SQL Servers | Help Desk | Youtuber | Just For Fun.
+
+                        <li><a target="_blank" href="http://www.twitter.com/kayiien" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
 			<section class="3u">
-						<div class="circular"><img src="images/daniel.jpg"> </div>
-						<h3>Daniel Molina</h3>
-						<p>//Ingeniero De Sistemas //Amante De Las Telecomunicaciones //Pensador
-//Analista //DataBase Designer //Gamer And Owner Of XBOX360 //Lover Of Halo //Backend Programmer //Runner De Medio Tiempo // Amante Y Conservacionista De La Naturaleza!</p>
-			<a href="http://www.twitter.com/Daniel_Molina92" class="fa fa-twitter" target="_blank"><span>Twitter</span></a>
-			</section>	
-			<section class="3u">
-				<div class="circular"><img src="images/juan.jpg"> </div>
-						<h3>Juan Arrieta</h3>				
-				<p>Programador | Game Maker | Escritor | Soñador | Adicto al #Toddy | Alegre | Espontaneo | Divertido | ΔOX☐ User | Microsoft Fanboy | Metal Gear Solid Loved | Gamer | Anime Follower | Ateo | SQL Servers | Help Desk | Youtuber | Just For Fun.</p>
-			<a href="http://www.twitter.com/kayiien" class="fa fa-twitter" target="_blank"><span>Twitter</span></a>
-			</section>	
-			<section class="3u">
-						<div class="circular"><img src="images/frank.png"> </div>
+						<div class="circular"><img src="images/franklin.png"> </div>
 						<h3>Franklin Marquez</h3>
-						<p>Estudiante de Ingenieria de Sistemas, Aficionado a los Video Juegos Multiplataforma, la Música de Rock, el Anime, la Ciencia y la Tecnología; Programador, especializado en el desarrollo de páginas web, aplicaciones y juegos en Unity 3D, edición en Photoshop y diseño en pixel art. No me guio por los modismos o convencionalismos sociales</p>
-			<a href="http://www.twitter.com/frank_2893" class="fa fa-twitter" target="_blank"><span>Twitter</span></a>
-			</section>	
+						<p align="right">Estudiante de Ingenieria de Sistemas, Aficionado a los Video Juegos Multiplataforma, la Música de Rock, el Anime, la Ciencia y la Tecnología; Programador, especializado en el desarrollo de páginas web, aplicaciones y juegos en Unity 3D, edición en Photoshop y diseño en pixel art. No me guio por los modismos o convencionalismos sociales.
+                        <li><a target="_blank" href="http://www.twitter.com/frank_2893" class="fa fa-twitter"><span>Twitter</span></a></li></p>
+			</section>				
 			<section class="3u">
-						<div class="circular"><img src="images/luda.jpg"> </div>
-						<h3>Luis Casanova</h3>
-						 <p> Jedi | Geek | Curious | Sarcástico | Ironico | AIESECer | Front/Backend Developer | UX/UI Designer | Gamer | Java | C++ | Networking & Telecom | Digital Marketing | Systems Design | Crítico | Zombie come libros de medio tiempo | Science &amp; Tech | </p>
-			</section>	
-			<section class="3u">
-				<div class="circular"><img src="images/oscar.jpg"> </div>
+						<div class="circular"><img src="images/oscar.jpg"> </div>
 						<h3>Oscar Lopez</h3>
-						<p>Buscador del Equilibrio entre Mente y Cuerpo, Shotting Games, Fitness, xD, Vegetariano, Analista, Smile always, Algorithm Developer, me gusta el anime, programar, Muertos Vientes, Preppers, mitologia, critico, debatir con religiosos, calcular probabilidades, siempre ser mejor de lo que eres, enterpresing, entender distintas cultura, Kanjis, relax.</p>
+						<p align="right">Buscador del Equilibrio entre Mente y Cuerpo, Shotting Games, Fitness, xD, Vegetariano, Analista, Smile always, Algorithm Developer, me gusta el anime, programar, Muertos Vientes, Preppers, mitologia, critico, debatir con religiosos, calcular probabilidades, siempre ser mejor de lo que eres, enterpresing, entender distintas cultura, Kanjis, relax.</p>
+						<li><a target="_blank" href="http://www.twitter.com/OJoseLopez" class="fa fa-twitter"><span>Twitter</span></a></li></p>
 			</section>	
-			<section class="3u">
-					<div class="circular"><img src="images/x.jpg"> </div>
-						<h3>Erwin </h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-			</section>	
-			</div><!-- cierre del row -->
-			</div> <!-- cierre del team -->
+			</div>
+			</div> 
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+					<blockquote>“La innovación distingue a los líderes de los seguidores. Steven Jobs. ”</blockquote>
 				</section>
 			</div>
 		</div>
@@ -177,7 +181,7 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Get in touch</h2>
+						<h2>Contactanos</h2>
 						<span class="byline">¡Llena este formulario y brindanos las curdas!</span>
 					</header>
 					<ul class="contact">
