Blog and Timeline modified and linked from index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<section>
 					<header>
 						<h2>Contactanos</h2>
-						<span class="byline">¡Llena este formulario y brindanos las curdas!</span>
+						<span class="byline">Ayudanos a cambiar el mundo</span>
 					</header>
 					<ul class="contact">
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
