--- a/blog.html
+++ b/blog.html
@@ -1,20 +1,18 @@
 <!DOCTYPE HTML>
+<!--
+	Blog by Luda
+-->
 <html>
 	<head>
-		<title>Guareber Tech </title>
+		<title>Blog de Guareber</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/styleb.css" >
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="shortcut icon" href="images/favicon.ico" type="images/favicon.icon">
-        <link rel="icon" href="images/favicon.ico" type="image/favicon.icon">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
-		<script src="js/modernizr.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -42,100 +40,85 @@
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href="#">Blog</a></h1>
-					<span class="tag">Nuestra Linia de Tiempo</span>
+					<span class="tag">Posts y articulos</span>
 				</div>
 			</div>
 		</div>
 	<!-- Header --> 
 
 	<!-- Main -->
-		<section id="cd-timeline" class="cd-container">
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div>
+		<div id="main">
+			<div class="container">
+				<div class="row">
 
-			<div class="cd-timeline-content">
-				<h2>Evento ASOVAC</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Ago 12</span>
+					<!-- Sidebar -->
+					<div id="sidebar" class="4u">
+						<section>
+							<header>
+								<h2>Etiam malesuada</h2>
+							</header>
+							<div class="row">
+								<section class="6u">
+									<ul class="default">
+										<li><a href="#">Donec facilisis tempor</a></li>
+										<li><a href="#">Nulla convallis cursus</a></li>
+										<li><a href="#">Integer congue euismod</a></li>
+										<li><a href="#">Venenatis vulputate</a></li>
+										<li><a href="#">Morbi ligula volutpat</a></li>
+									</ul>
+								</section>
+								<section class="6u">
+									<ul class="default">
+										<li><a href="#">Donec facilisis tempor</a></li>
+										<li><a href="#">Nulla convallis cursus</a></li>
+										<li><a href="#">Integer congue euismod</a></li>
+										<li><a href="#">Venenatis vulputate</a></li>
+										<li><a href="#">Morbi ligula volutpat</a></li>
+									</ul>
+								</section>
+							</div>
+						</section>
+						<section>
+							<header>
+								<h2>Mauris vulputate</h2>
+							</header>
+							<ul class="style">
+								<li>
+									<p class="posted">Enero, 2015  |  (10 )  Comments</p>
+									<p><a href="#">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</a></p>
+								</li>
+								<li>
+									<p class="posted">Diciembre, 2014  |  (10 )  Comments</p>
+									<p><a href="#">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</a></p>
+								</li>
+							</ul>
+						</section>
+					</div>
+					
+					<!-- Content -->
+					<div id="content" class="8u skel-cell-important">
+						<section>
+							<header>
+								<h2>Como conquistar al mundo part. I</h2>
+								<span class="byline">Dominar a la humanidad en pequeños pasos</span>
+							</header>
+							<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
+							<p>Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
+							<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
+							<p>Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
+						</section>
+					</div>
+
+				</div>
 			</div>
 		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-movie">
-				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div>
-
-			<div class="cd-timeline-content">
-				<h2>CLEI 2015</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Sep 22</span>
-			</div>
-		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div>
-
-			<div class="cd-timeline-content">
-				<h2>Guareber Meetup</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Oct 11</span>
-			</div>
-		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-location">
-				<img src="img/cd-icon-location.svg" alt="Location">
-			</div>
-
-			<div class="cd-timeline-content">
-				<h2>Play with Us</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Nov 29</span>
-			</div>
-		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-location">
-				<img src="img/cd-icon-location.svg" alt="Location">
-			</div>
-
-			<div class="cd-timeline-content">
-				<h2>Fiesta en UNEFA</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Dic 15</span>
-			</div>
-		</div>
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-movie">
-				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div>
-
-			<div class="cd-timeline-content">
-				<h2>Final de anno</h2>
-				<p>This is the content of the last section</p>
-				<span class="cd-date">Dic 31</span>
-			</div>
-		</div>
-	</section>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/main.js"></script> 
 	<!-- /Main -->
 
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;La innovación distingue a los líderes de los seguidores. Steven Jobs.&rdquo;</blockquote>
+					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
 				</section>
 			</div>
 		</div>
@@ -147,7 +130,7 @@
 				<section>
 					<header>
 						<h2>Footer</h2>
-						<span class="byline">Get in touch</span>
+						<span class="byline">Ayudanos a cambiar el mundo</span>
 					</header>
 					<ul class="contact">
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -163,7 +146,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Todos los Derechos Reservados 2015 <a href="http://www.twitter.com/GuareberTech">Guareber Tech</a> 
+				Design: <a href="http://templated.co">@Luda</a> 
 			</div>
 		</div>
 
