Copy fixed and buttons removed from feature-descriptions

--- a/index.html
+++ b/index.html
@@ -59,20 +59,17 @@
 					<section class="4u">
 						<span class="pennant"> <span class="fa fa-book"> </span></span>
 						<h3>Academia GuareberTech</h3>
-						<p>Nuestra principal motivacion es compartir nuestros conocimientos con los amantes de IT para de esta manera aportar con el saber..</p>
-						<a href="#" class="button button-style1">Leer Mas</a>
+						<p>Nuestra principal motivacion es compartir nuestros conocimientos con los amantes de IT. Es por esto que ponemos a tu alcance toda nuestra experiencia y conocimiento.</p>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-laptop"> </span></span>
 						<h3>Pasion</h3>
-						<p>Somos apasionados por lo que hacemos, y queremos mostrarle al mundo que se puede ser creativos, divertirse y aportar a la sociedad al mismo tiempo .</p>
-						<a href="#" class="button button-style1">Leer Mas</a>
+						<p>Somos apasionados por lo que hacemos y queremos mostrarle al mundo que se puede ser creativos, divertirse y aportar soluciones a la sociedad al mismo tiempo.</p>			
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-globe"> </span></span>
 						<h3>Eventos</h3>
-						<p>Ocasionalmente generamos nuevos eventos para mejorar el planeta, educacion, compartir, tutoriales </p>
-						<a href="#" class="button button-style1">Leer Mas</a>
+						<p>Ocasionalmente generamos nuevos eventos para mejorar nuestra sociedad y el planeta. Creemos en la educacion libre y en el compartir del conocimiento </p>						
 					</section>
 
 				</div>
