Minor changes in copy, timeline and index

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="icon" type="image/png" href="Logos/favicon.png">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -28,10 +29,10 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="#">Portafolio</a></li>
-						<li><a href="#">Equipo</a></li>
-						<li><a href="left-sidebar.html">Blog</a></li>
-						<li><a href="#">Contacto</a></li>
+						<li><a href="#portafolio">Portafolio</a></li>
+						<li><a href="#equipo">Equipo</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="timeline.html">timeline</a></li>
 					</ul>
 				</nav>
 			</div>
