--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 						<li><a href="#equipo">Equipo</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="timeline.html">timeline</a></li>
-						<li><a href="#">Contacto</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -41,8 +40,8 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#"></a></h1>
-					<span class="tag"></span>
+					<h1><a href="#">Guareber </a></h1>
+					<span class="tag">Tech</span>
 				</div>
 			</div>
 		</div>
@@ -50,9 +49,9 @@
 	<!-- Featured -->
 		<div id="featured">
 			<div class="container">
-				<header>
-					<h2>Guareber Tech</h2>
-				</header>
+				<!-- header>
+					<h2>¿Que somos?</h2>
+				</header> -->
 				<p> La Fundacion <strong>Guareber Tech</strong>, Es una organizacion sin fines de lucro con el objetivo principal de crear soluciones tecnologicas que generan un impacto positivo en nuestra sociedad. Es por ello, que utilizamos nuestras habilidades en las diferentes tecnologicas para crear contenido que faciliten las tareas cotidianas </p>
 				<hr />
 				<div class="row">
