--- a/timeline.html
+++ b/timeline.html
@@ -49,17 +49,16 @@
 	<!-- Header --> 
 
 	<!-- Main -->
+	<div id="header">
 		<section id="cd-timeline" class="cd-container" >  
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div>
-
 			<div class="cd-timeline-content">
 				<h2>Evento ASOVAC</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Ago 12</span>
 			</div>
 		</div>
 
@@ -67,12 +66,10 @@
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
 			</div>
-
 			<div class="cd-timeline-content">
 				<h2>CLEI 2015</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Sep 22</span>
 			</div>
 		</div>
 
@@ -80,12 +77,10 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div>
-
 			<div class="cd-timeline-content">
 				<h2>Guareber Meetup</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Oct 11</span>
 			</div>
 		</div>
 
@@ -95,10 +90,9 @@
 			</div>
 
 			<div class="cd-timeline-content">
-				<h2>Play with Us</h2>
+				<h2>Congreso de Tecnologias UNEFA 2015</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Nov 29</span>
 			</div>
 		</div>
 
@@ -111,24 +105,22 @@
 				<h2>Fiesta en UNEFA</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Dic 15</span>
 			</div>
 		</div>
-
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
 			</div>
 
 			<div class="cd-timeline-content">
-				<h2>Final de anno</h2>
-				<p>This is the content of the last section</p>
-				<span class="cd-date">Dic 31</span>
+				<h2>Competencias Anual de Programacion</h2>
+				<p>Falta el copi</p>
 			</div>
 		</div>
 	</section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> 
+</div>
 	<!-- /Main -->
 
 	<!-- Tweet -->
