--- a/timeline.html
+++ b/timeline.html
@@ -56,8 +56,12 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div>
 			<div class="cd-timeline-content">
-				<h2>Evento ASOVAC</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+				<h2>AsoVAC 2014</h2>
+				<p>La Asociación Venezolana Para el Avance de la Ciencia o su siglas AsoVAC
+				se realizo en la Universidad de Los Andes (Tachira) en el cual la organización
+				participo en la presentación de dos proyectos de Investigación.</p>
+
+				<p>Dicho evento patrocinado por las universidades mas prestigiosas del pais, se llevo acabo con multiples investigadores a nivel nacional e internacional para hacer gala de sus proyectos investigativos.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
 			</div>
 		</div>
@@ -67,8 +71,8 @@
 				<img src="img/cd-icon-movie.svg" alt="Movie">
 			</div>
 			<div class="cd-timeline-content">
-				<h2>CLEI 2015</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+				<h2>CLEI 2013</h2>
+				<p>El Centro Latinoamericano de Estudios en Informática o CLEI es un congreso anual que se realiza en los paises suscritos a este tan prestigioso evento. Este congreso se llevo a acabo en la ciudad de Vargas en donde las universidades mas representativas a nivel internacional y nacional mostraron sus estudios y/o proyectos. </p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
 			</div>
 		</div>
@@ -78,8 +82,8 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div>
 			<div class="cd-timeline-content">
-				<h2>Guareber Meetup</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+				<h2>CoNCISA 2014</h2>
+				<p>La Conferencia Nacional de Computacion Informatica y Sistemas. Es un evento.. </p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
 			</div>
 		</div>
